PXEPR-1245-new-icons new navigation icons add

--- a/src/static/atoms/icons/page.html
+++ b/src/static/atoms/icons/page.html
@@ -252,6 +252,24 @@
             </span>
             <span class="icon-box__name">graph</span>
         </div>
+        <div class="icon-box" title="document-warning">
+            <span class="icon-box__symbol">
+                <span class="icon icon--document-warning"></span>
+            </span>
+            <span class="icon-box__name">document-warning</span>
+        </div>
+        <div class="icon-box" title="document-down">
+            <span class="icon-box__symbol">
+                <span class="icon icon--document-down"></span>
+            </span>
+            <span class="icon-box__name">document-down</span>
+        </div>
+        <div class="icon-box" title="document-success">
+            <span class="icon-box__symbol">
+                <span class="icon icon--document-success"></span>
+            </span>
+            <span class="icon-box__name">document-success</span>
+        </div>
     </div>
 </div>
 <h3>Social</h3>
