--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,8 @@
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
         </script>
+        <meta name="google-site-verification" content="S2HgqkW4rJgsZuVJbrgrAmdwYnguu7zKvCejgAsvyNs">
+        <meta name="facebook-domain-verification" content="vngn44jpdm6rc7czf0f9regvnltvt3">
     </head>
     <body>
         <lnd-root>Loading&hellip;</lnd-root>
