PXEPR-1262-social-buttons social icon change

--- a/src/static/atoms/buttons/page.html
+++ b/src/static/atoms/buttons/page.html
@@ -206,7 +206,7 @@
 <h3>Social</h3>
 <div class="static-pages">
     <h4>Normal size</h4>
-    <div class="btn-holder">
+    <div class="btn-holder pt-3 pl-3 bg--body">
         <lnd-button label="facebook"
                     type="facebook">
         </lnd-button>
