PXEPR-1274-blog card tyles add, card styles and structure edit

--- a/src/static/atoms/icons/page.html
+++ b/src/static/atoms/icons/page.html
@@ -6,6 +6,12 @@
 <h3>App</h3>
 <div class="static-pages">
     <div class="icon-boxes">
+        <div class="icon-box" title="arrow-down">
+            <span class="icon-box__symbol">
+                <span class="icon icon--arrow-down"></span>
+            </span>
+            <span class="icon-box__name">arrow-down</span>
+        </div>
         <div class="icon-box" title="arrow-right">
             <span class="icon-box__symbol">
                 <span class="icon icon--arrow-right"></span>
@@ -239,12 +245,6 @@
                 <span class="icon icon--leaf"></span>
             </span>
             <span class="icon-box__name">leaf</span>
-        </div>
-        <div class="icon-box" title="arrow-right">
-            <span class="icon-box__symbol">
-                <span class="icon icon--arrow-right"></span>
-            </span>
-            <span class="icon-box__name">arrow-right</span>
         </div>
         <div class="icon-box" title="graph">
             <span class="icon-box__symbol">
