--- a/src/static/atoms/card/page.html
+++ b/src/static/atoms/card/page.html
@@ -8,28 +8,60 @@
 <div class="card-tiles mb-7">
     <div class="row no-gutters card-tiles__inner">
         <div class="col-md-4 card-tile__item">
-            <lnd-card [data]="tileCard"></lnd-card>
+            <lnd-card
+                type="block"
+                [data]="tileCard"
+            >
+            </lnd-card>
         </div>
         <div class="col-md-4 card-tile__item">
-            <lnd-card [data]="tileCard"></lnd-card>
+            <lnd-card
+                type="block"
+                [data]="tileCard"
+            >
+            </lnd-card>
         </div>
         <div class="col-md-4 card-tile__item">
-            <lnd-card [data]="tileCard"></lnd-card>
+            <lnd-card
+                type="block"
+                [data]="tileCard"
+            >
+            </lnd-card>
         </div>
         <div class="col-md-4 card-tile__item">
-            <lnd-card [data]="tileCard"></lnd-card>
+            <lnd-card
+                type="block"
+                [data]="tileCard"
+            >
+            </lnd-card>
         </div>
         <div class="col-md-4 card-tile__item">
-            <lnd-card [data]="tileCard"></lnd-card>
+            <lnd-card
+                type="block"
+                [data]="tileCard"
+            >
+            </lnd-card>
         </div>
         <div class="col-md-4 card-tile__item">
-            <lnd-card [data]="tileCard"></lnd-card>
+            <lnd-card
+                type="block"
+                [data]="tileCard"
+            >
+            </lnd-card>
         </div>
         <div class="col-md-4 card-tile__item card-tile__item--last-item">
-            <lnd-card [data]="tileCard"></lnd-card>
+            <lnd-card
+                type="block"
+                [data]="tileCard"
+            >
+            </lnd-card>
         </div>
         <div class="col-md-4 card-tile__item card-tile__item--last-item">
-            <lnd-card [data]="tileCard"></lnd-card>
+            <lnd-card
+                type="block"
+                [data]="tileCard"
+            >
+            </lnd-card>
         </div>
     </div>
 </div>
@@ -37,22 +69,39 @@
 <div class="card-blogs">
     <div class="row card-blogs__inner">
         <div class="col-md-4 card-blog__item">
-            <lnd-card [data]="blogCard"></lnd-card>
+            <lnd-card
+                type="link"
+                [data]="blogCard"
+            >
+            </lnd-card>
         </div>
         <div class="col-md-4 card-blog__item">
-            <lnd-card [data]="blogCard"></lnd-card>
+            <lnd-card
+                type="link"
+                [data]="blogCard"
+            >
+            </lnd-card>
         </div>
         <div class="col-md-4 card-blog__item">
-            <lnd-card [data]="blogCard"></lnd-card>
+            <lnd-card
+                type="link"
+                [data]="blogCard"
+            >
+            </lnd-card>
         </div>
         <div class="col-md-4 card-blog__item">
-            <lnd-card [data]="blogCard"></lnd-card>
+            <lnd-card
+                type="link"
+                [data]="blogCard"
+            >
+            </lnd-card>
         </div>
         <div class="col-md-4 card-blog__item">
-            <lnd-card [data]="blogCard"></lnd-card>
-        </div>
-        <div class="col-md-4 card-blog__item">
-            <lnd-card [data]="blogCard"></lnd-card>
+            <lnd-card
+                type="link"
+                [data]="blogCard"
+            >
+            </lnd-card>
         </div>
     </div>
 </div>
