--- a/src/static/atoms/micro-table/page.html
+++ b/src/static/atoms/micro-table/page.html
@@ -3,11 +3,14 @@
         type="icon"
         icon="icon--delete"
         variant="icon"
-        title="Zamítnout"
-    ></lnd-button>
+    >
+    </lnd-button>
     <lnd-button
+        customClass="ml-2"
+        type="icon"
         icon="icon--edit"
-        type="icon">
+        variant="icon"
+    >
     </lnd-button>
 </ng-template>
 
@@ -16,11 +19,11 @@
         <lnd-breadcrumb [breadcrumbItems]="breadcrumbItemsSimple"></lnd-breadcrumb>
     </div>
 </div>
-<div>
-    <h1>Micro table</h1>
-    <lnd-micro-table
-        title="Odběrná místa"
-        [data]="rows"
-        [actionTemplates]="templateIcons"
-    ></lnd-micro-table>
+<div class="row">
+    <div class="col-md-6 col-lg-4">
+        <lnd-micro-table
+            [data]="rows"
+            [actionTemplates]="templateIcons"
+        ></lnd-micro-table>
+    </div>
 </div>
