PXEPR-1335-loader html and styles added

--- a/src/static/pages/supply-points-detail/page.html
+++ b/src/static/pages/supply-points-detail/page.html
@@ -112,6 +112,20 @@
                             Současná smlouva
                         </h2>
                         <a href="#">Stáhnout</a> (PDF)
+                        <div class="loader">
+                            <span class="loader__circle-item"></span>
+                            <span class="loader__circle-item"></span>
+                            <span class="loader__circle-item"></span>
+                            <span class="loader__circle-item"></span>
+                            <span class="loader__circle-item"></span>
+                            <span class="loader__circle-item"></span>
+                            <span class="loader__circle-item"></span>
+                            <span class="loader__circle-item"></span>
+                            <span class="loader__circle-item"></span>
+                            <span class="loader__circle-item"></span>
+                            <span class="loader__circle-item"></span>
+                            <span class="loader__circle-item"></span>
+                        </div>
                     </div>
                     <div class="col-12">
                         <p class="mb-1 text-uppercase">Dodávka do</p>
