--- a/src/static/atoms/loader/page.html
+++ b/src/static/atoms/loader/page.html
@@ -6,20 +6,7 @@
 <div class="static-pages">
 	<div class="row">
 		<div class="col-12">
-			<div class="loader">
-				<span class="loader__circle-item"></span>
-				<span class="loader__circle-item"></span>
-				<span class="loader__circle-item"></span>
-				<span class="loader__circle-item"></span>
-				<span class="loader__circle-item"></span>
-				<span class="loader__circle-item"></span>
-				<span class="loader__circle-item"></span>
-				<span class="loader__circle-item"></span>
-				<span class="loader__circle-item"></span>
-				<span class="loader__circle-item"></span>
-				<span class="loader__circle-item"></span>
-				<span class="loader__circle-item"></span>
-			</div>
+            <lnd-loader></lnd-loader>
 		</div>
 	</div>
 </div>
