PXEPR-1368-bank-id btn add

--- a/src/static/atoms/buttons/page.html
+++ b/src/static/atoms/buttons/page.html
@@ -213,6 +213,10 @@
         <lnd-button label="Google"
                     type="google">
         </lnd-button>
+        <lnd-button
+            label="Bankovní identita"
+            type="bankid">
+        </lnd-button>
     </div>
 </div>
 <h3>Simple</h3>
