--- a/src/static/pages/registration/page.html
+++ b/src/static/pages/registration/page.html
@@ -45,16 +45,22 @@
                                     Nebo si založte účet pomocí
                                 </p>
                                 <div class="row mb-5">
-                                    <div class="col-md-6">
+                                    <div class="col-md-6 mb-3">
                                         <lnd-button
                                             label="Facebook"
                                             type="facebook">
                                         </lnd-button>
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-md-6 mb-3">
                                         <lnd-button
                                             label="Google"
                                             type="google">
+                                        </lnd-button>
+                                    </div>
+                                    <div class="col-md-auto mx-auto">
+                                        <lnd-button
+                                            label="Bankovní identita"
+                                            type="bankid">
                                         </lnd-button>
                                     </div>
                                 </div>
