--- a/src/static/atoms/buttons/page.html
+++ b/src/static/atoms/buttons/page.html
@@ -214,7 +214,7 @@
                     type="google">
         </lnd-button>
         <lnd-button
-            label="Bankovní identita"
+            variant="icon"
             type="bankid">
         </lnd-button>
     </div>
@@ -267,7 +267,7 @@
     <h4>Disable</h4>
     <div class="btn-holder">
         <lnd-button
-        type="icon"
+            type="icon"
             icon="icon--star"
             variant="icon"
             isDisabled="true">
