PXEPR-1422-back-from-import

--- a/src/static/pages/import-approval/page.html
+++ b/src/static/pages/import-approval/page.html
@@ -106,7 +106,7 @@
         </div>
         <div class="row">
             <div class="col-12 text-center">
-                <a href="#" (click)="backAction($event)">zpět</a>
+                <a href="#" (click)="backAction($event)">Zpět</a>
                 <lnd-button
                     customClass="ml-5"
                     label="Schválit nabídky"
