--- a/src/static/pages/import-upload/page.html
+++ b/src/static/pages/import-upload/page.html
@@ -41,7 +41,7 @@
     <div class="row">
         <div class="col-xl-8 offset-xl-2 text-center">
             <a (click)="backAction($event)">
-                zpět
+                Zpět
             </a>
         </div>
     </div>
