--- a/src/static/organisms/carousel/page.html
+++ b/src/static/organisms/carousel/page.html
@@ -18,7 +18,7 @@
             </div>
             <div class="row py-4 mb-4 bg--gradient-violet">
                 <div class="col-12 offset-lg-6 col-lg-6">
-                    <pxe-carousel-suppliers></pxe-carousel-suppliers>
+                    <pxe-carousel-suppliers [supplierLogos]="supplierLogos"></pxe-carousel-suppliers>
                 </div>
             </div>
         </div>
