--- a/src/static/pages/payment-verification/page.html
+++ b/src/static/pages/payment-verification/page.html
@@ -125,7 +125,7 @@
                         Použijte stejný a bezpečný způsob přihlášení jako do vašeho internetového bankovnictví
                     </p>
                     <ol class="check-list">
-                        <li class="pb-1">Služba je zaštítěna Šeskou národní bankou</li>
+                        <li class="pb-1">Služba je zaštítěna Českou národní bankou</li>
                         <li class="pb-1">Více informací na <a href="https://bankovni-identita.cz/" target="_blank">webu</a> bankovní identity</li>
                     </ol>
                 </div>
