--- a/src/static/pages/payment-verification/page.html
+++ b/src/static/pages/payment-verification/page.html
@@ -16,7 +16,7 @@
     </div>
     <div class="row">
         <div class="col-12 text-center">
-            <h3>
+            <h3 class="h2">
                 Nyní potřebujeme ověřit<br> vaši totožnost.
             </h3>
             <p>
@@ -26,9 +26,9 @@
         <div class="col-md-6 d-flex">
             <div class="page-box page-box--with-inner d-md-flex flex-md-column justify-content-md-between">
                 <div class="page-box__inner">
-                    <h2>
+                    <h3 class="h2">
                         Ověřovací korunová platba
-                    </h2>
+                    </h3>
                     <p>
                         Na doručení této ověřovací platby čekáme do 8.8.1344, proto ji odešlete raději hned teď. Platba u nás může být během chvíle, ale z některé banky to může trvat až 3 dny a&nbsp;my vás nechceme zdržovat.
                     </p>
@@ -36,7 +36,7 @@
                 <div class="page-box__inner page-box__inner--light page-box__inner--same-height">
                     <div class="row justify-content-center">
                         <div class="col-12 d-none d-md-block">
-                            <table class="table-basic">
+                            <table class="table-basic mx-auto">
                                 <tbody>
                                     <tr>
                                         <td>Číslo účtu</td>
@@ -62,7 +62,7 @@
                             </table>
                         </div>
                         <div class="col-auto d-block d-md-none">
-                            <table class="table-basic">
+                            <table class="table-basic mx-auto">
                                 <tbody>
                                 <tr>
                                     <td class="pb-3">
@@ -118,21 +118,21 @@
         <div class="col-md-6 d-flex">
             <div class="page-box page-box--with-inner d-md-flex flex-md-column justify-content-md-between">
                 <div class="page-box__inner">
-                    <h2>
+                    <h3 class="h2">
                         Bankovní identita
-                    </h2>
+                    </h3>
                     <p class="mb-3">
                         Použijte stejný a bezpečný způsob přihlášení jako do vašeho internetového bankovnictví
                     </p>
                     <ol class="check-list">
-                        <li class="pb-1">Služba je zaštítěna Českou národní bankou</li>
+                        <li class="pb-1">Služba je zaštítěna Šeskou národní bankou</li>
                         <li class="pb-1">Více informací na <a href="https://bankovni-identita.cz/" target="_blank">webu</a> bankovní identity</li>
                     </ol>
                 </div>
-                <div class="page-box__inner page-box__inner--light page-box__inner--same-height">
+                <div class="page-box__inner page-box__inner--light page-box__inner--same-height d-flex flex-column justify-content-center">
                     <div class="row text-center">
                         <div class="col-12">
-                            <img width="145" class="mb-3" src="/assets/images/social/bankid-transparent.svg" alt="bankid" title="bankid">
+                            <img width="145" class="mb-3" src="/assets/images/social/bankid-black.svg" alt="bankid" title="bankid">
                         </div>
                         <div class="col-12">
                             <lnd-button
