--- a/src/static/pages/payment-verification/page.html
+++ b/src/static/pages/payment-verification/page.html
@@ -23,7 +23,7 @@
                 Využijte jeden ze způsobů níže.
             </p>
         </div>
-        <div class="col-md-6 d-flex">
+        <div class="d-flex col-md-6 col-xl-5 offset-xl-1">
             <div class="page-box page-box--with-inner d-md-flex flex-md-column justify-content-md-between">
                 <div class="page-box__inner">
                     <h3 class="h2">
@@ -33,8 +33,8 @@
                         Na doručení této ověřovací platby čekáme do 8.8.1344, proto ji odešlete raději hned teď. Platba u nás může být během chvíle, ale z některé banky to může trvat až 3 dny a&nbsp;my vás nechceme zdržovat.
                     </p>
                 </div>
-                <div class="page-box__inner page-box__inner--light page-box__inner--same-height">
-                    <div class="row justify-content-center">
+                <div class="page-box__inner page-box__inner--light page-box__inner--same-height px-md-3">
+                    <div class="row justify-content-center no-gutters">
                         <div class="col-12 d-none d-md-block">
                             <table class="table-basic mx-auto">
                                 <tbody>
@@ -115,7 +115,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6 d-flex">
+        <div class="d-flex col-md-6 col-xl-5">
             <div class="page-box page-box--with-inner d-md-flex flex-md-column justify-content-md-between">
                 <div class="page-box__inner">
                     <h3 class="h2">
