--- a/src/static/pages/user-profile/page.html
+++ b/src/static/pages/user-profile/page.html
@@ -118,9 +118,9 @@
                     ></lnd-form-field>
                     <lnd-form-field
                         customFormGroupClass="mb-0"
-                        [formControl]="notificationForm.controls.watchdogNotification"
+                        [formControl]="notificationForm.controls.notificatiosAllowed"
                         [type]="'CHECKBOX'"
-                        [id]="'watchDogNotification'"
+                        [id]="'notificatiosAllowed'"
                         [labelTemplate]="watchDogLabelTemplate"
                     ></lnd-form-field>
                     <div class="row">
