PXEPR-966-compare-offer owner supply point offer component edit

--- a/src/static/atoms/buttons/page.html
+++ b/src/static/atoms/buttons/page.html
@@ -16,6 +16,10 @@
             type="secondary">
         </lnd-button>
         <lnd-button
+            label="Dark"
+            type="dark">
+        </lnd-button>
+        <lnd-button
             label="Success"
             type="success">
         </lnd-button>
@@ -83,14 +87,9 @@
             iconPosition="right">
         </lnd-button>
     </div>
-    <!-- <lnd-button label="Success"
-                    type="success">
-    </lnd-button>
+    <!--
     <lnd-button label="Warning"
                     type="warning">
-    </lnd-button>
-    <lnd-button label="Danger"
-                    type="danger">
     </lnd-button>
     <lnd-button label="Light"
                     type="light">
