--- a/src/static/pages/supply-points-offer/page.html
+++ b/src/static/pages/supply-points-offer/page.html
@@ -15,17 +15,18 @@
 </div>
 <div class="row">
     <div class="col-12 col-xl-10 offset-xl-1">
-        <div class="row align-items-center mb-3">
-            <div class="col-12 mb-5 text-center col-md-3 mb-md-0 text-md-left">
+        <div class="row justify-content-md-between mb-md-3 text-center text-md-left">
+            <div class="col-12 mb-5 col-md-auto mb-md-0">
                 <lnd-button
                     label="Krok zpět"
                     type="secondary">
                 </lnd-button>
             </div>
-            <div class="col-12 col-md-6 text-center">
-                <h2 class="mb-0">
-                    Vyberte si nabídku
-                </h2>
+            <div class="col-12 mb-5 col-md-auto mb-md-0">
+                <lnd-button
+                    label="Zobrazit současnou smlouvu"
+                    type="dark">
+                </lnd-button>
             </div>
         </div>
     </div>
