PXEPR-1437 bank id text add

--- a/src/static/pages/registration/page.html
+++ b/src/static/pages/registration/page.html
@@ -53,7 +53,7 @@
                                             customClass="btn-public w-100">
                                         </lnd-button>
                                     </div>
-                                    <div class="col-md-6 mb-3">
+                                    <div class="col-md-6 mb-5">
                                         <lnd-button
                                             label="Google"
                                             type="google"
@@ -62,11 +62,15 @@
                                         </lnd-button>
                                     </div>
                                     <div class="col-12">
+                                        <p class="mb-2">
+                                            Případně použijte stejný a bezpečný způsob ověření identity jako do vašeho internetového bankovnictví.
+                                        </p>
                                         <lnd-button
                                             type="bankid"
-                                            class="w-100"
+                                            class="w-100 mb-1"
                                             customClass="btn-public w-100">
                                         </lnd-button>
+                                        <a href="https://bankid.cz" target="_blank">Více informací o Bank ID</a>
                                     </div>
                                 </div>
                                 <p class="font-size-14">
