PXEPR-1034-supplier-profile tooltip component edit

--- a/src/static/pages/supplier-profile/page.html
+++ b/src/static/pages/supplier-profile/page.html
@@ -98,7 +98,7 @@
                     class="form-container form-container--big">
                     <div class="row no-gutters">
                         <div class="col-12 mb-2">
-                            <small>Číselná řada</small>
+                            <span class="font-size-12 align-top mr-2">Číselná řada</span>
                             <lnd-tooltip
                                 [actionTemplate]="tooltipSeries"
                                 direction="bottom"
