--- a/src/static/pages/supplier-profile/page.html
+++ b/src/static/pages/supplier-profile/page.html
@@ -102,7 +102,8 @@
                             <lnd-tooltip
                                 [actionTemplate]="tooltipSeries"
                                 direction="bottom"
-                                class="tooltip-supplier-profile-numbers">
+                                class="tooltip-supplier-profile-numbers"
+                                customContentClass="tooltip__content--fixed-width">
                                 Údaje z číselné řady se propisují do uzavřených smluv. <br>
                                 Např. EL001CK (EL - prefix, 001 - proměnná, CK - sufix). <br>
                                 K proměnné se vždy bude přičítat +1, musí tedy být číselného formátu.
