PXEPR-1437 dots addded

--- a/src/static/pages/payment-verification/page.html
+++ b/src/static/pages/payment-verification/page.html
@@ -122,7 +122,7 @@
                         Bankovní identita
                     </h3>
                     <p class="mb-3">
-                        Použijte stejný a bezpečný způsob přihlášení jako do vašeho internetového bankovnictví
+                        Použijte stejný a bezpečný způsob přihlášení jako do vašeho internetového bankovnictví.
                     </p>
                     <ol class="check-list">
                         <li class="pb-1">Služba je zaštítěna Šeskou národní bankou</li>
