--- a/src/static/pages/history/page.html
+++ b/src/static/pages/history/page.html
@@ -6,14 +6,14 @@
             </h1>
         </div>
     </div>
-    <div class="row">
-        <div class="col-12">
-            <ng-container *ngFor="let historyOfSupplyPoints of history | keyvalue">
+    <ng-container *ngFor="let historyOfSupplyPoints of history | keyvalue">
+        <div class="row">
+            <div class="col-12 col-xl-10 offset-xl-1 mb-5">
                 <h2 class="text-center">Odběrná místa s ukončenou dodávkou energií za rok {{historyOfSupplyPoints.key}}</h2>
                 <div *ngFor="let supplyPoint of historyOfSupplyPoints.value" class="supply-points">
                     <pxe-supply-point [data]="supplyPoint"></pxe-supply-point>
                 </div>
-            </ng-container>
+            </div>
         </div>
-    </div>
+    </ng-container>
 </div>
