PXEPR-437 icon add

--- a/src/static/atoms/icons/page.html
+++ b/src/static/atoms/icons/page.html
@@ -6,6 +6,12 @@
 <h3>App</h3>
 <div class="static-pages">
     <div class="icon-boxes">
+        <div class="icon-box" title="clock">
+            <span class="icon-box__symbol">
+                <span class="icon icon--clock"></span>
+            </span>
+            <span class="icon-box__name">clock</span>
+        </div>
         <div class="icon-box" title="arrow-down">
             <span class="icon-box__symbol">
                 <span class="icon icon--arrow-down"></span>
